# advent-of-code

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  pyproject.toml  run_all.sh  run_benchmark.sh
.github/workflows/: test.yml
2025/day01/: main.cpp
2025/day02/: main.cpp
2025/day03/: main.cpp
2025/day04/: main.cpp
2025/day05/: main.cpp
2025/day06/: main.cpp
2025/day07/: main.cpp
2025/day08/: main.cpp
2025/day09/: main.cpp
2025/day10/: main.cpp
2025/day11/: main.cpp
2025/day12/: main.cpp
include/: aoc.hpp  input.hpp
input/: day01.txt  day06.txt  day07.txt  day08.txt  day10.txt  day11.txt
tests/: test_solutions.py
